--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -1473,13 +1473,16 @@
         padding:20px 30px 30px 30px;
         margin-bottom:20px;
         .rowSixFl{
+            float: left;
+            width: 60%;
            .chart-canvas{
              height: 281px;
            }
         }
         .rowSixFr{
-            width:465px;
-            margin-left: 40px;
+            float: right;
+            width: 37%;
+            margin-left: 2%;
             .itemRowTit{padding-left:35px;}
             .rowSixFrBox{
                 border-left:1px dashed #c9c9c9;
@@ -1688,16 +1691,12 @@
 @media (max-width:1600px){
     .home-index{
         .rowOne{
+            padding-bottom: 50px;
             &.flex-wrap{
                 display:block;
                 .rowOneOne{
                     width:100%;
                     margin-bottom:20px;
-                    .rowOneOneItem{
-                        .rowOneOneItemFr{
-                            margin-left:50px;
-                        }
-                    }
                 }
                 .rowOneTwoThree{
                     max-width:100%;
@@ -1767,6 +1766,14 @@
                     .el-table .el-table__cell{text-align: center; color:#4c4c4c;font-family:'PingFangSC Regular';}
                 } 
             }
+        }
+        .rowFive{
+            .rowFiveFl{width:60%;}
+            .rowFiveFr{width:37%;}
+        }
+        .rowSix{
+            .rowSixFl{width:60%;}
+            .rowSixFr{width:37%;}
         }
     }
 }
