--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -281,17 +281,30 @@
                         .legendItem4:before{
                             content: "";
                             display: block;
-                            width: 14px;
+                            width: 20px;
                             height: 2px;
                             background: #f38080;
                             position: absolute;
                             left: 0;
                             top: 6px;
                         }
+                        .legendItem4:after{
+                            content: "";
+                            display: block;
+                            width: 8px;
+                            height: 8px;
+                            background: #fff;
+                            box-sizing: border-box;
+                            border: 2px solid #f38080;
+                            position: absolute;
+                            left: 6px;
+                            top: 3px;
+                            border-radius: 50%;
+                        }
                         .legendItem5:before{
                             content: "";
                             display: block;
-                            width: 14px;
+                            width: 20px;
                             height: 2px;
                             background: #fcb030;
                             position: absolute;
