--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -91,7 +91,7 @@
             margin-bottom:12px;
             line-height:30px;
             height:30px;
-            font-family: 'PingFangSC Semibold';
+            font-family: 'PingFangSC-Semibold';
         }
         .itemRowTit{
             padding-bottom: 12px;
@@ -220,7 +220,29 @@
                 .el-input__inner{
                     background-color: #ffffff;
                     border: 1px solid #e1e3ea;
+                    padding-left: 5px;
+                    padding-right: 30px;
                     .el-range-input{background:none;}
+                }
+                .el-input__inner:hover+.el-input__prefix{
+                    .el-icon-date{
+                        &:before{
+                            content: "";
+                            display: none;
+                        }
+                    }
+                }
+                .el-input__suffix:hover+.el-input__prefix{
+                    .el-icon-date{
+                        &:before{
+                            content: "";
+                            display: none;
+                        }
+                    }
+                }
+                .el-input__prefix{
+                    right: 5px;
+                    left: auto;
                 }
               }
             }
@@ -246,7 +268,7 @@
                             color: #999;
                             padding-left: 28px;
                             position: relative;
-                            font-family:'PingFangSC Regular';
+                            font-family:'PingFangSC-Regular';
                         }
                         .legendItem1:before{
                             content: "";
@@ -327,7 +349,7 @@
                         color:#1a1a1a;
                         line-height:30px;
                         font-weight:bold;
-                        font-family:'PingFangSC Regular';
+                        font-family:'PingFangSC-Regular';
                         &+dd{
                             border-top:0px;
                         }
@@ -341,7 +363,7 @@
                         color:#666666;
                         line-height:30px;
                         padding:12px 0px;
-                        font-family:'PingFangSC Regular';
+                        font-family:'PingFangSC-Regular';
                         span{
                             font-size:12px;
                             color:#ccc;
@@ -352,7 +374,7 @@
                             font-size:22px;
                             color:#313131;
                             font-weight:normal;
-                            font-family:'PingFangSC Semibold';
+                            font-family:'PingFangSC-Semibold';
                             &.color01{
                               color:#f16565;
                             }
@@ -464,7 +486,7 @@
                     font-weight:normal;
                     padding-top:10px;
                     padding-bottom:5px;
-                    font-family:'PingFangSC Semibold';
+                    font-family:'PingFangSC-Semibold';
                 }
                 p{
                     clear:both;
@@ -588,7 +610,7 @@
                         color:#999999;
                         text-align:center;
                         line-height:12px;
-                        font-family:'PingFangSC Regular';
+                        font-family:'PingFangSC-Regular';
                         span{
                             padding-left:13px;
                             padding-right:13px;
@@ -718,7 +740,7 @@
                             color:#333333;
                             line-height:1;
                             padding-bottom:10px;
-                            font-family:'PingFangSC Regular';
+                            font-family:'PingFangSC-Regular';
                         }
                         .rowTwoTwoItemDlNum{
                             clear:both;
@@ -726,13 +748,13 @@
                             font-size:34px;
                             color:#ff4245;
                             line-height:1;
-                            font-family:'PingFangSC Medium';
+                            font-family:'PingFangSC-Medium';
                             span{
                                 display:inline-block;
                                 font-size:14px;
                                 color:#ff8e90;
                                 padding-left:5px;
-                                font-family:'PingFangSC Regular';
+                                font-family:'PingFangSC-Regular';
                             }
                         }
                     }
@@ -766,7 +788,7 @@
                 width:36%;
                 max-width:622px;
                 margin-left:2%;
-                .el-table .el-table__cell{text-align: center; color:#4c4c4c;font-family:'PingFangSC Regular';}
+                .el-table .el-table__cell{text-align: center; color:#4c4c4c;font-family:'PingFangSC-Regular';}
                 .rowThreeOne03Tit{
                     clear:both;
                     display:block;
@@ -797,6 +819,7 @@
                         line-height:20px;
                         padding:7px 0;
                         border-bottom:0px;
+                        font-weight: bold;
                     }
                     th.gutter{background:#f4f6f9;}
                     .el-table__body tr.el-table__row--striped td{background:#fff;}
@@ -919,7 +942,7 @@
                             color:#1a1a1a;
                             line-height:20px;
                             padding-top:7px;
-                            font-family:'PingFangSC Regular';
+                            font-family:'PingFangSC-Regular';
                             .group{
                                 font-size:12px;
                                 color:#aaaaaa;
@@ -1456,14 +1479,14 @@
                             color:#999;
                             line-height: 1;
                             padding-bottom:10px;
-                            font-family:'PingFangSC Regular';
+                            font-family:'PingFangSC-Regular';
                         }
                         strong{
                             clear: both;
                             display: block;
                             color:#ff4246;
                             line-height: 1;
-                            font-family:'PingFangSC Semibold';
+                            font-family:'PingFangSC-Semibold';
                             font-size: 28px;
                             font-weight: normal;
                             i{
@@ -1490,14 +1513,14 @@
         margin-bottom:20px;
         .rowSixFl{
             float: left;
-            width: 60%;
+            width: 66%;
            .chart-canvas{
              height: 281px;
            }
         }
         .rowSixFr{
             float: right;
-            width: 37%;
+            width: 31%;
             margin-left: 2%;
             .itemRowTit{padding-left:35px;}
             .rowSixFrBox{
@@ -1635,7 +1658,7 @@
                     color:#1a1a1a;
                     line-height:1;
                     padding-bottom:15px;
-                    font-family:'PingFangSC Semibold';
+                    font-family:'PingFangSC-Semibold';
                 }
                 strong{
                     clear: both;
@@ -1644,7 +1667,7 @@
                     color: #1a1a1a;
                     line-height: 1;
                     font-weight: normal;
-                    font-family:'PingFangSC Semibold';
+                    font-family:'PingFangSC-Semibold';
                 }
             }
         }
@@ -1707,12 +1730,12 @@
 @media (max-width:1600px){
     .home-index{
         .rowOne{
-            padding-bottom: 50px;
             &.flex-wrap{
                 display:block;
                 .rowOneOne{
                     width:100%;
                     margin-bottom:20px;
+                    padding-bottom: 50px;
                 }
                 .rowOneTwoThree{
                     max-width:100%;
@@ -1779,13 +1802,30 @@
                     display:block;
                     padding-top:40px;
                     margin-left:0px;
-                    .el-table .el-table__cell{text-align: center; color:#4c4c4c;font-family:'PingFangSC Regular';}
+                    width: 100%;
+                    max-width: 100%;
+                    .el-table .el-table__cell{text-align: center; color:#4c4c4c;font-family:'PingFangSC-Regular';}
                 } 
             }
         }
         .rowFive{
             .rowFiveFl{width:60%;}
-            .rowFiveFr{width:37%;}
+            .rowFiveFr{
+                width:37%;
+                .rowFiveFrBox{
+                    .rowFiveFrBoxFr{
+                        width:230px;
+                        li{
+                            width:130px;
+                            left:100px;
+                            p{
+                                border-left:65px solid transparent;
+                                border-right:65px solid transparent;
+                            }
+                        }
+                    }
+                }
+            }
         }
         .rowSix{
             .rowSixFl{width:60%;}
