--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -234,10 +234,10 @@
                     .legendFly{
                         position: absolute;
                         bottom: -22px;
-                        width: 100%;
+                        width:520px;
                         text-align: center;
                         left: 50%;
-                        transform: translateX(-24%);
+                        margin-left:-260px;
                         span{
                             display: inline-block;
                             margin-right: 20px;
