--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -1,5 +1,4 @@
 ﻿.home-index{
-    font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
@@ -91,7 +90,6 @@
             margin-bottom:12px;
             line-height:30px;
             height:30px;
-            font-family: 'PingFangSC-Semibold';
         }
         .itemRowTit{
             padding-bottom: 12px;
@@ -246,7 +244,6 @@
                             color: #999;
                             padding-left: 28px;
                             position: relative;
-                            font-family:'PingFangSC-Regular';
                         }
                         .legendItem1:before{
                             content: "";
@@ -327,7 +324,6 @@
                         color:#1a1a1a;
                         line-height:30px;
                         font-weight:bold;
-                        font-family:'PingFangSC-Regular';
                         &+dd{
                             border-top:0px;
                         }
@@ -341,7 +337,6 @@
                         color:#666666;
                         line-height:30px;
                         padding:12px 0px;
-                        font-family:'PingFangSC-Regular';
                         span{
                             font-size:12px;
                             color:#ccc;
@@ -352,7 +347,6 @@
                             font-size:22px;
                             color:#313131;
                             font-weight:normal;
-                            font-family:'PingFangSC-Semibold';
                             &.color01{
                               color:#f16565;
                             }
@@ -464,7 +458,6 @@
                     font-weight:normal;
                     padding-top:10px;
                     padding-bottom:5px;
-                    font-family:'PingFangSC-Semibold';
                 }
                 p{
                     clear:both;
@@ -588,7 +581,6 @@
                         color:#999999;
                         text-align:center;
                         line-height:12px;
-                        font-family:'PingFangSC-Regular';
                         span{
                             padding-left:13px;
                             padding-right:13px;
@@ -718,7 +710,6 @@
                             color:#333333;
                             line-height:1;
                             padding-bottom:10px;
-                            font-family:'PingFangSC-Regular';
                         }
                         .rowTwoTwoItemDlNum{
                             clear:both;
@@ -726,13 +717,11 @@
                             font-size:34px;
                             color:#ff4245;
                             line-height:1;
-                            font-family:'PingFangSC-Medium';
                             span{
                                 display:inline-block;
                                 font-size:14px;
                                 color:#ff8e90;
                                 padding-left:5px;
-                                font-family:'PingFangSC-Regular';
                             }
                         }
                     }
@@ -766,7 +755,7 @@
                 width:36%;
                 max-width:622px;
                 margin-left:2%;
-                .el-table .el-table__cell{text-align: center; color:#4c4c4c;font-family:'PingFangSC-Regular';}
+                .el-table .el-table__cell{text-align: center; color:#4c4c4c;}
                 .rowThreeOne03Tit{
                     clear:both;
                     display:block;
@@ -920,7 +909,6 @@
                             color:#1a1a1a;
                             line-height:20px;
                             padding-top:7px;
-                            font-family:'PingFangSC-Regular';
                             .group{
                                 font-size:12px;
                                 color:#aaaaaa;
@@ -1457,14 +1445,12 @@
                             color:#999;
                             line-height: 1;
                             padding-bottom:10px;
-                            font-family:'PingFangSC-Regular';
                         }
                         strong{
                             clear: both;
                             display: block;
                             color:#ff4246;
                             line-height: 1;
-                            font-family:'PingFangSC-Semibold';
                             font-size: 28px;
                             font-weight: normal;
                             i{
@@ -1636,7 +1622,6 @@
                     color:#1a1a1a;
                     line-height:1;
                     padding-bottom:15px;
-                    font-family:'PingFangSC-Semibold';
                 }
                 strong{
                     clear: both;
@@ -1645,7 +1630,6 @@
                     color: #1a1a1a;
                     line-height: 1;
                     font-weight: normal;
-                    font-family:'PingFangSC-Semibold';
                 }
             }
         }
@@ -1782,7 +1766,7 @@
                     margin-left:0px;
                     width: 100%;
                     max-width: 100%;
-                    .el-table .el-table__cell{text-align: center; color:#4c4c4c;font-family:'PingFangSC-Regular';}
+                    .el-table .el-table__cell{text-align: center; color:#4c4c4c;}
                 } 
             }
         }
